[project]
name = "api-gateway"
version = "0.1.0"
description = "Simple API Gateway built with Django REST Framework as a technical assessment for Brooklyn Health"
requires-python = ">=3.14"

[tool.ruff]
target-version = "py314"
line-length = 80

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF012", # mutable class attributes (Django models use them)
]

[tool.ruff.lint.isort]
known-first-party = ["config", "gateway"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["gateway"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
]
command_line = "manage.py test --verbosity=2"
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
]
